# arx-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
tests/: test_server.py
