[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx-mcp-server"
version = "0.1.0"
description = "ARX MCP Server - Execute 100+ security operations with policy enforcement, audit logging, and human approvals"
readme = "README_MCP.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "GetHammerpath", email = "support@hammerpath.io"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "compliance",
    "policy-enforcement",
    "audit-logging",
    "sast",
    "dast",
    "vulnerability-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy==1.7.0",
    "ruff==0.1.8",
]

[project.scripts]
arx-mcp-server = "main:main"

[project.urls]
Homepage = "https://github.com/GetHammerpath/arx-mcp-server"
Documentation = "https://github.com/GetHammerpath/arx-mcp-server#readme"
Repository = "https://github.com/GetHammerpath/arx-mcp-server.git"
Issues = "https://github.com/GetHammerpath/arx-mcp-server/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["arx_mcp_server"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
